prj3portfolio v1.2 pathfix

--- a/inc/html/about.html
+++ b/inc/html/about.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/uki/3portfolio/inc/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
@@ -23,16 +23,16 @@
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/web/core/projects/prj2imgal/index.html">DOME</a></li>
-              <li><a href="/web/core/projects/prj2imgal/imgal.html">CLICKS</a></li>
-              <li><a href="/web/core/projects/prj2imgal/about.html">WHO</a></li>
+              <li><a href="/uki/3portfolio/index.html">DOME</a></li>
+              <li><a href="/uki/3portfolio/inc/html/portfolio.html">CLICKS</a></li>
+              <li><a href="/uki/3portfolio/inc/html/about.html">WHO</a></li>
             </ul>
           </div>
         </div>
       </nav> 
     <div class="container-fluid bg-1 text-center">
         <h3 class="margin">Who Am I?</h3>
-        <img src="/web/core/projects/prj2imgal/res/img1.jpeg" class="img-circle smaller" alt="groot">
+        <img src="/uki/3portfolio/res/img/img1.jpeg" class="img-circle smaller" alt="groot">
         <h3>I'm a dreamer</h3>
     </div>
     <div class="container-fluid bg-2 text-center">
