--- a/inc/html/portfolio.html
+++ b/inc/html/portfolio.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/uki/3portfolio/inc/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
@@ -25,9 +25,9 @@
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/web/core/projects/prj2imgal/index.html">DOME</a></li>
-              <li><a href="/web/core/projects/prj2imgal/imgal.html">CLICKS</a></li>
-              <li><a href="/web/core/projects/prj2imgal/about.html">WHO</a></li>
+              <li><a href="/uki/3portfolio/index.html">DOME</a></li>
+              <li><a href="/uki/3portfolio/inc/html/portfolio.html">CLICKS</a></li>
+              <li><a href="/uki/3portfolio/inc/html/about.html">WHO</a></li>
             </ul>
           </div>
         </div>
@@ -47,12 +47,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-6 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#1">
-        <img src="/web/core/projects/prj2imgal/res/img2.jpg">
+        <img src="/uki/3portfolio/res/img/img2.jpg">
       </a>
       <div class="modal fade" id="1" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img2.jpg">
+          <img src="/uki/3portfolio/res/img/img2.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -65,12 +65,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-3 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#2">
-        <img src="/web/core/projects/prj2imgal/res/img3.png">
+        <img src="/uki/3portfolio/res/img/img3.png">
       </a>
       <div class="modal fade" id="2" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img3.png">
+          <img src="/uki/3portfolio/res/img/img3.png">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -83,12 +83,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-3 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#3">
-        <img src="/web/core/projects/prj2imgal/res/img4.png">
+        <img src="/uki/3portfolio/res/img/img4.png">
       </a>
       <div class="modal fade" id="3" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img4.png">
+          <img src="/uki/3portfolio/res/img/img4.png">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -101,12 +101,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-4 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#4">
-        <img src="/web/core/projects/prj2imgal/res/img5.jpg">
+        <img src="/uki/3portfolio/res/img/img5.jpg">
       </a>
       <div class="modal fade" id="4" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img5.jpg">
+          <img src="/uki/3portfolio/res/img/img5.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -119,12 +119,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-8 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#5">
-        <img src="/web/core/projects/prj2imgal/res/img6.jpg">
+        <img src="/uki/3portfolio/res/img/img6.jpg">
       </a>
       <div class="modal fade" id="5" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img6.jpg">
+          <img src="/uki/3portfolio/res/img/img6.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -137,12 +137,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-6 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#6">
-        <img src="/web/core/projects/prj2imgal/res/img7.jpg">
+        <img src="/uki/3portfolio/res/img/img7.jpg">
       </a>
       <div class="modal fade" id="6" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img7.jpg">
+          <img src="/uki/3portfolio/res/img/img7.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -155,12 +155,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-6 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#7">
-        <img src="/web/core/projects/prj2imgal/res/img8.jpg">
+        <img src="/uki/3portfolio/res/img/img8.jpg">
       </a>
       <div class="modal fade" id="7" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img8.jpg">
+          <img src="/uki/3portfolio/res/img/img8.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -173,12 +173,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-8 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#8">
-        <img src="/web/core/projects/prj2imgal/res/img9.jpg">
+        <img src="/uki/3portfolio/res/img/img9.jpg">
       </a>
       <div class="modal fade" id="8" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img9.jpg">
+          <img src="/uki/3portfolio/res/img/img9.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -191,12 +191,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-4 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#9">
-        <img src="/web/core/projects/prj2imgal/res/img10.jpg">
+        <img src="/uki/3portfolio/res/img/img10.jpg">
       </a>
       <div class="modal fade" id="9" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img10.jpg">
+          <img src="/uki/3portfolio/res/img/img10.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -209,12 +209,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-3 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#10">
-        <img src="/web/core/projects/prj2imgal/res/img11.jpg">
+        <img src="/uki/3portfolio/res/img/img11.jpg">
       </a>
       <div class="modal fade" id="10" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img11.jpg">
+          <img src="/uki/3portfolio/res/img/img11.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -227,12 +227,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-5 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#11">
-        <img src="/web/core/projects/prj2imgal/res/img12.jpg">
+        <img src="/uki/3portfolio/res/img/img12.jpg">
       </a>
       <div class="modal fade" id="11" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img12.jpg">
+          <img src="/uki/3portfolio/res/img/img12.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -245,12 +245,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-4 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#12">
-        <img src="/web/core/projects/prj2imgal/res/img13.jpg">
+        <img src="/uki/3portfolio/res/img/img13.jpg">
       </a>
       <div class="modal fade" id="12" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img13.jpg">
+          <img src="/uki/3portfolio/res/img/img13.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -263,12 +263,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-4 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#13">
-        <img src="/web/core/projects/prj2imgal/res/img14.jpg">
+        <img src="/uki/3portfolio/res/img/img14.jpg">
       </a>
       <div class="modal fade" id="13" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img14.jpg">
+          <img src="/uki/3portfolio/res/img/img14.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -281,12 +281,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-8 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#14">
-        <img src="/web/core/projects/prj2imgal/res/img15.jpg">
+        <img src="/uki/3portfolio/res/img/img15.jpg">
       </a>
       <div class="modal fade" id="14" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img15.jpg">
+          <img src="/uki/3portfolio/res/img/img15.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -299,12 +299,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-6 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#15">
-        <img src="/web/core/projects/prj2imgal/res/img16.jpg">
+        <img src="/uki/3portfolio/res/img/img16.jpg">
       </a>
       <div class="modal fade" id="15" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img16.jpg">
+          <img src="/uki/3portfolio/res/img/img16.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -317,12 +317,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-3 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#16">
-        <img src="/web/core/projects/prj2imgal/res/img17.jpg">
+        <img src="/uki/3portfolio/res/img/img17.jpg">
       </a>
       <div class="modal fade" id="16" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img17.jpg">
+          <img src="/uki/3portfolio/res/img/img17.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -335,12 +335,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-3 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#17">
-        <img src="/web/core/projects/prj2imgal/res/img18.jpg">
+        <img src="/uki/3portfolio/res/img/img18.jpg">
       </a>
       <div class="modal fade" id="17" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img18.jpg">
+          <img src="/uki/3portfolio/res/img/img18.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
@@ -353,12 +353,12 @@
   <div class="gal-item col-md-6 col-sm-6 col-lg-12 col-xs-12">
     <div class="box">
       <a data-toggle="modal" data-target="#18">
-        <img src="/web/core/projects/prj2imgal/res/img19.jpg">
+        <img src="/uki/3portfolio/res/img/img19.jpg">
       </a>
       <div class="modal fade" id="18" role="dialog">
         <div class="modal-dialog">
           <div class="modal-body">
-          <img src="/web/core/projects/prj2imgal/res/img19.jpg">
+          <img src="/uki/3portfolio/res/img/img19.jpg">
           </div>
           <div class="description">
           <h4>A Beautiful Vector Art</h4>
