--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="/uki/3portfolio/inc/css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
@@ -23,9 +23,9 @@
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/uki/3portfolio/index.html">DOME</a></li>
-              <li><a href="/uki/3portfolio/inc/html/portfolio.html">CLICKS</a></li>
-              <li><a href="/uki/3portfolio/inc/html/about.html">WHO</a></li>
+              <li><a href="index.html">DOME</a></li>
+              <li><a href="/pages/portfolio.html">CLICKS</a></li>
+              <li><a href="/pages/about.html">WHO</a></li>
             </ul>
           </div>
         </div>
@@ -44,16 +44,16 @@
   <!-- Wrapper for slides -->
     <div class="carousel-inner" style="border-radius: 10px;">
         <div class="item active">
-            <img src="/uki/3portfolio/res/img/img22.jpg" alt="What if?" style="width:100%;">
+            <img src="/res/img/img22.jpg" alt="What if?" style="width:100%;">
         </div>
         <div class="item">
-            <img src="/uki/3portfolio/res/img/img23.jpg" alt="Don't Bother" style="width:100%;">
+            <img src="/res/img/img23.jpg" alt="Don't Bother" style="width:100%;">
         </div>  
         <div class="item">
-            <img src="/uki/3portfolio/res/img/img24.jpg" alt="Why Dude" style="width:100%;">
+            <img src="/res/img/img24.jpg" alt="Why Dude" style="width:100%;">
         </div>
         <div class="item">
-            <img src="/uki/3portfolio/res/img/img25.jpg" alt="Good Night" style="width:100%;">
+            <img src="/res/img/img25.jpg" alt="Good Night" style="width:100%;">
         </div>
     </div>
     <!-- Left and right controls -->
