--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -25,9 +25,9 @@
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/uki/3portfolio/index.html">DOME</a></li>
-              <li><a href="/uki/3portfolio/inc/html/portfolio.html">CLICKS</a></li>
-              <li><a href="/uki/3portfolio/inc/html/about.html">WHO</a></li>
+              <li><a href="/index.html">DOME</a></li>
+              <li><a href="/inc/html/portfolio.html">CLICKS</a></li>
+              <li><a href="/inc/html/about.html">WHO</a></li>
             </ul>
           </div>
         </div>
